# ourAgentTeams

./: .env.example  .gitignore  DEVELOPER_GUIDE.md  Dockerfile  LICENSE  Makefile  README.md  README_CN.md  README_EN.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
config/: config.yaml  privacy_rules.yaml
src/: config.py  watchdog.py
src/cli/: coro.py  display.py  interactive.py  main.py
src/cost/: calculator.py
src/leader/: integrator.py  model_selector.py  monitor.py  orchestrator.py  query_router.py  task_planner.py
src/mcp/: server.py
src/memory/: capability_store.py  rag_engine.py  task_history.py  user_pref_selector.py
src/models/: api_model.py  base.py  local_model.py
src/privacy/: guard.py
src/prompts/: leader_system.md  review.md  task_analysis.md
tests/: test_capability_store.py  test_config.py  test_cost.py  test_monitor.py  test_privacy.py  test_task_planner.py
